<resources>
    <string name="app_name">Accident report</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_report">Accident information</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="hurt">Was anyone hurt in the accident?</string>
    <string name="owner">Are you the owner of the vehicle</string>
    <string name="date">17/4/2019</string>
    <string name="time">17:00</string>
    <string name="drive">Are you Driving the vehicle at the point of the accident?</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="date_of_accident">Date of Accident</string>
</resources>
