<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".report2"
    android:background="@drawable/background2">

    <TextView
        android:id="@+id/date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_accident"
        android:layout_marginTop="19sp"
        android:layout_marginLeft="25sp"
        android:layout_marginStart="25sp" />

    <EditText
        android:id="@+id/date"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21sp"
        android:layout_marginLeft="25sp"
        android:hint="@string/date"/>
    <TextView
        android:id="@+id/time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time of the Accident"
        android:layout_marginTop="99sp"
        android:layout_marginLeft="25sp"/>

    <EditText
        android:id="@+id/time"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_below="@+id/date"
        android:layout_marginLeft="25sp"
        android:hint="@string/time"/>

    <TextView
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location of accident"
        android:layout_below="@+id/time"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="25sp"/>

    <EditText
        android:id="@+id/location"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_below="@+id/time"
        android:layout_marginLeft="25sp"
        android:hint="Bypass"/>


    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Finish"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="250dp"/>



</RelativeLayout>